--- a/PDF/build.gradle
+++ b/PDF/build.gradle
@@ -13,4 +13,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$var.AppCompatVersion"
+    implementation "androidx.exifinterface:exifinterface:$var.ExifInterfaceVersion"
 }
