--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,11 @@ buildscript {
                 // Dependencies
                 AppCompatVersion       : "1.1.0",
                 ConstraintLayoutVersion: "1.1.3",// 版本库地址：https://dl.google.com/dl/android/maven2/androidx/constraintlayout/group-index.xml https://dl.google.com/dl/android/maven2/com/android/support/constraint/group-index.xml
+                ExifInterfaceVersion   : "1.3.0-alpha01",
 
                 // Dependencies Others
+                EasyPhotosVersion      : "3.0.6",
+                GlideVersion           : "4.11.0",
         ]
     }
 
@@ -37,6 +40,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
